--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NODE_PATH=src
 REACT_APP_SHOPIFY=d80ec663480008130c47c79bd5657cb4
+REACT_APP_SHOPIFY_URL=https://2span.myshopify.com/api/2020-04/graphql.json
