--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "lscache": "^1.3.0",
     "mo-js": "^0.288.2",
     "polished": "^3.5.2",
+    "react-helmet": "^6.0.0",
     "react-in-viewport": "^1.0.0-alpha.11",
     "react-spring": "^8.0.27",
     "react-svg": "^11.0.21",
